[package]
name = "skive"
version = "0.1.0"
edition = "2021"
authors = ["Graham Keenan <graham.keenan@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Array slicer and compressor library"
readme = "README.md"
repository = "https://github.com/Tyrannican/skive"
keywords = ["array", "slice", "compression", "chunk"]
categories = ["compression"]

[dependencies]
bytes = "1.7.2"
flate2 = { version = "1.0.34", features = ["zlib"], default-features = false }
hex = "0.4.3"
sha2 = "0.10.8"
threadpool = "1.8.1"

[dev-dependencies]
rand = "0.8.5"
